# experiments

hello_user/: CMakeLists.txt
hello_user/src/: main.cpp
shared_hello/: CMakeLists.txt
shared_hello/include/: hello.hpp
shared_hello/src/: hello.cpp
